PJPParser.py
# Generated from D:/PJP/PJP.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PJPParser ( Parser ):

    grammarFileName = "PJP.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'read'", "'write'", "'fopen'", 
                     "'fwrite'", "','", "'<<'", "'{'", "'}'", "'if'", "'('", 
                     "')'", "'else'", "'while'", "'int'", "'float'", "'bool'", 
                     "'string'", "'file'", "'='", "'||'", "'&&'", "'=='", 
                     "'!='", "'<'", "'>'", "'+'", "'-'", "'.'", "'*'", "'/'", 
                     "'%'", "'!'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "BOOL_LITERAL", "FLOAT_LITERAL", 
                      "INT_LITERAL", "STRING_LITERAL", "IDENTIFIER", "COMMENT", 
                      "WS" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_typeSpec = 2
    RULE_identifierList = 3
    RULE_expressionList = 4
    RULE_expression = 5
    RULE_assignmentExpression = 6
    RULE_logicalOrExpression = 7
    RULE_logicalAndExpression = 8
    RULE_equalityExpression = 9
    RULE_relationalExpression = 10
    RULE_additiveExpression = 11
    RULE_multiplicativeExpression = 12
    RULE_unaryExpression = 13
    RULE_primaryExpression = 14
    RULE_literal = 15

    ruleNames =  [ "program", "statement", "typeSpec", "identifierList", 
                   "expressionList", "expression", "assignmentExpression", 
                   "logicalOrExpression", "logicalAndExpression", "equalityExpression", 
                   "relationalExpression", "additiveExpression", "multiplicativeExpression", 
                   "unaryExpression", "primaryExpression", "literal" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    BOOL_LITERAL=34
    FLOAT_LITERAL=35
    INT_LITERAL=36
    STRING_LITERAL=37
    IDENTIFIER=38
    COMMENT=39
    WS=40

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(PJPParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PJPParser.StatementContext)
            else:
                return self.getTypedRuleContext(PJPParser.StatementContext,i)


        def getRuleIndex(self):
            return PJPParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = PJPParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 541435350334) != 0):
                self.state = 32
                self.statement()
                self.state = 37
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 38
            self.match(PJPParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PJPParser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class DeclarationStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PJPParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def typeSpec(self):
            return self.getTypedRuleContext(PJPParser.TypeSpecContext,0)

        def identifierList(self):
            return self.getTypedRuleContext(PJPParser.IdentifierListContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclarationStatement" ):
                return visitor.visitDeclarationStatement(self)
            else:
                return visitor.visitChildren(self)


    class WhileStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PJPParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(PJPParser.ExpressionContext,0)

        def statement(self):
            return self.getTypedRuleContext(PJPParser.StatementContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStatement" ):
                return visitor.visitWhileStatement(self)
            else:
                return visitor.visitChildren(self)


    class EmptyStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PJPParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEmptyStatement" ):
                return visitor.visitEmptyStatement(self)
            else:
                return visitor.visitChildren(self)


    class WriteStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PJPParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expressionList(self):
            return self.getTypedRuleContext(PJPParser.ExpressionListContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWriteStatement" ):
                return visitor.visitWriteStatement(self)
            else:
                return visitor.visitChildren(self)


    class FileWriteStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PJPParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IDENTIFIER(self):
            return self.getToken(PJPParser.IDENTIFIER, 0)
        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PJPParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(PJPParser.ExpressionContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFileWriteStatement" ):
                return visitor.visitFileWriteStatement(self)
            else:
                return visitor.visitChildren(self)


    class BlockStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PJPParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PJPParser.StatementContext)
            else:
                return self.getTypedRuleContext(PJPParser.StatementContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockStatement" ):
                return visitor.visitBlockStatement(self)
            else:
                return visitor.visitChildren(self)


    class FopenStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PJPParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IDENTIFIER(self):
            return self.getToken(PJPParser.IDENTIFIER, 0)
        def STRING_LITERAL(self):
            return self.getToken(PJPParser.STRING_LITERAL, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFopenStatement" ):
                return visitor.visitFopenStatement(self)
            else:
                return visitor.visitChildren(self)


    class FwriteStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PJPParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IDENTIFIER(self):
            return self.getToken(PJPParser.IDENTIFIER, 0)
        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PJPParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(PJPParser.ExpressionContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFwriteStatement" ):
                return visitor.visitFwriteStatement(self)
            else:
                return visitor.visitChildren(self)


    class ReadStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PJPParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def identifierList(self):
            return self.getTypedRuleContext(PJPParser.IdentifierListContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReadStatement" ):
                return visitor.visitReadStatement(self)
            else:
                return visitor.visitChildren(self)


    class ExpressionStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PJPParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(PJPParser.ExpressionContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressionStatement" ):
                return visitor.visitExpressionStatement(self)
            else:
                return visitor.visitChildren(self)


    class IfStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PJPParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(PJPParser.ExpressionContext,0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PJPParser.StatementContext)
            else:
                return self.getTypedRuleContext(PJPParser.StatementContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStatement" ):
                return visitor.visitIfStatement(self)
            else:
                return visitor.visitChildren(self)



    def statement(self):

        localctx = PJPParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 108
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                localctx = PJPParser.EmptyStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 40
                self.match(PJPParser.T__0)
                pass

            elif la_ == 2:
                localctx = PJPParser.DeclarationStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 41
                self.typeSpec()
                self.state = 42
                self.identifierList()
                self.state = 43
                self.match(PJPParser.T__0)
                pass

            elif la_ == 3:
                localctx = PJPParser.ReadStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 45
                self.match(PJPParser.T__1)
                self.state = 46
                self.identifierList()
                self.state = 47
                self.match(PJPParser.T__0)
                pass

            elif la_ == 4:
                localctx = PJPParser.WriteStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 49
                self.match(PJPParser.T__2)
                self.state = 50
                self.expressionList()
                self.state = 51
                self.match(PJPParser.T__0)
                pass

            elif la_ == 5:
                localctx = PJPParser.FopenStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 53
                self.match(PJPParser.T__3)
                self.state = 54
                self.match(PJPParser.IDENTIFIER)
                self.state = 55
                self.match(PJPParser.STRING_LITERAL)
                self.state = 56
                self.match(PJPParser.T__0)
                pass

            elif la_ == 6:
                localctx = PJPParser.FwriteStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 57
                self.match(PJPParser.T__4)
                self.state = 58
                self.match(PJPParser.IDENTIFIER)
                self.state = 59
                self.match(PJPParser.T__5)
                self.state = 60
                self.expression()
                self.state = 65
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==6:
                    self.state = 61
                    self.match(PJPParser.T__5)
                    self.state = 62
                    self.expression()
                    self.state = 67
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 68
                self.match(PJPParser.T__0)
                pass

            elif la_ == 7:
                localctx = PJPParser.FileWriteStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 70
                self.match(PJPParser.IDENTIFIER)
                self.state = 71
                self.match(PJPParser.T__6)
                self.state = 72
                self.expression()
                self.state = 77
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==7:
                    self.state = 73
                    self.match(PJPParser.T__6)
                    self.state = 74
                    self.expression()
                    self.state = 79
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 80
                self.match(PJPParser.T__0)
                pass

            elif la_ == 8:
                localctx = PJPParser.BlockStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 82
                self.match(PJPParser.T__7)
                self.state = 86
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 541435350334) != 0):
                    self.state = 83
                    self.statement()
                    self.state = 88
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 89
                self.match(PJPParser.T__8)
                pass

            elif la_ == 9:
                localctx = PJPParser.IfStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 9)
                self.state = 90
                self.match(PJPParser.T__9)
                self.state = 91
                self.match(PJPParser.T__10)
                self.state = 92
                self.expression()
                self.state = 93
                self.match(PJPParser.T__11)
                self.state = 94
                self.statement()
                self.state = 97
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                if la_ == 1:
                    self.state = 95
                    self.match(PJPParser.T__12)
                    self.state = 96
                    self.statement()


                pass

            elif la_ == 10:
                localctx = PJPParser.WhileStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 10)
                self.state = 99
                self.match(PJPParser.T__13)
                self.state = 100
                self.match(PJPParser.T__10)
                self.state = 101
                self.expression()
                self.state = 102
                self.match(PJPParser.T__11)
                self.state = 103
                self.statement()
                pass

            elif la_ == 11:
                localctx = PJPParser.ExpressionStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 11)
                self.state = 105
                self.expression()
                self.state = 106
                self.match(PJPParser.T__0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeSpecContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PJPParser.RULE_typeSpec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeSpec" ):
                return visitor.visitTypeSpec(self)
            else:
                return visitor.visitChildren(self)




    def typeSpec(self):

        localctx = PJPParser.TypeSpecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_typeSpec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 1015808) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentifierListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(PJPParser.IDENTIFIER)
            else:
                return self.getToken(PJPParser.IDENTIFIER, i)

        def getRuleIndex(self):
            return PJPParser.RULE_identifierList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentifierList" ):
                return visitor.visitIdentifierList(self)
            else:
                return visitor.visitChildren(self)




    def identifierList(self):

        localctx = PJPParser.IdentifierListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_identifierList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(PJPParser.IDENTIFIER)
            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==6:
                self.state = 113
                self.match(PJPParser.T__5)
                self.state = 114
                self.match(PJPParser.IDENTIFIER)
                self.state = 119
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PJPParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(PJPParser.ExpressionContext,i)


        def getRuleIndex(self):
            return PJPParser.RULE_expressionList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressionList" ):
                return visitor.visitExpressionList(self)
            else:
                return visitor.visitChildren(self)




    def expressionList(self):

        localctx = PJPParser.ExpressionListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_expressionList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.expression()
            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==6:
                self.state = 121
                self.match(PJPParser.T__5)
                self.state = 122
                self.expression()
                self.state = 127
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignmentExpression(self):
            return self.getTypedRuleContext(PJPParser.AssignmentExpressionContext,0)


        def getRuleIndex(self):
            return PJPParser.RULE_expression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)




    def expression(self):

        localctx = PJPParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.assignmentExpression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PJPParser.RULE_assignmentExpression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class AssignmentContext(AssignmentExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PJPParser.AssignmentExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IDENTIFIER(self):
            return self.getToken(PJPParser.IDENTIFIER, 0)
        def assignmentExpression(self):
            return self.getTypedRuleContext(PJPParser.AssignmentExpressionContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)


    class AssignmentPassthroughContext(AssignmentExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PJPParser.AssignmentExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def logicalOrExpression(self):
            return self.getTypedRuleContext(PJPParser.LogicalOrExpressionContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignmentPassthrough" ):
                return visitor.visitAssignmentPassthrough(self)
            else:
                return visitor.visitChildren(self)



    def assignmentExpression(self):

        localctx = PJPParser.AssignmentExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_assignmentExpression)
        try:
            self.state = 134
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                localctx = PJPParser.AssignmentContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 130
                self.match(PJPParser.IDENTIFIER)
                self.state = 131
                self.match(PJPParser.T__19)
                self.state = 132
                self.assignmentExpression()
                pass

            elif la_ == 2:
                localctx = PJPParser.AssignmentPassthroughContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 133
                self.logicalOrExpression(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LogicalOrExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PJPParser.RULE_logicalOrExpression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class LogicalOrPassthroughContext(LogicalOrExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PJPParser.LogicalOrExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def logicalAndExpression(self):
            return self.getTypedRuleContext(PJPParser.LogicalAndExpressionContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogicalOrPassthrough" ):
                return visitor.visitLogicalOrPassthrough(self)
            else:
                return visitor.visitChildren(self)


    class LogicalOrContext(LogicalOrExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PJPParser.LogicalOrExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def logicalOrExpression(self):
            return self.getTypedRuleContext(PJPParser.LogicalOrExpressionContext,0)

        def logicalAndExpression(self):
            return self.getTypedRuleContext(PJPParser.LogicalAndExpressionContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogicalOr" ):
                return visitor.visitLogicalOr(self)
            else:
                return visitor.visitChildren(self)



    def logicalOrExpression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = PJPParser.LogicalOrExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 14
        self.enterRecursionRule(localctx, 14, self.RULE_logicalOrExpression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            localctx = PJPParser.LogicalOrPassthroughContext(self, localctx)
            self._ctx = localctx
            _prevctx = localctx

            self.state = 137
            self.logicalAndExpression(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 144
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = PJPParser.LogicalOrContext(self, PJPParser.LogicalOrExpressionContext(self, _parentctx, _parentState))
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_logicalOrExpression)
                    self.state = 139
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 140
                    self.match(PJPParser.T__20)
                    self.state = 141
                    self.logicalAndExpression(0) 
                self.state = 146
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class LogicalAndExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PJPParser.RULE_logicalAndExpression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class LogicalAndPassthroughContext(LogicalAndExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PJPParser.LogicalAndExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def equalityExpression(self):
            return self.getTypedRuleContext(PJPParser.EqualityExpressionContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogicalAndPassthrough" ):
                return visitor.visitLogicalAndPassthrough(self)
            else:
                return visitor.visitChildren(self)


    class LogicalAndContext(LogicalAndExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PJPParser.LogicalAndExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def logicalAndExpression(self):
            return self.getTypedRuleContext(PJPParser.LogicalAndExpressionContext,0)

        def equalityExpression(self):
            return self.getTypedRuleContext(PJPParser.EqualityExpressionContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogicalAnd" ):
                return visitor.visitLogicalAnd(self)
            else:
                return visitor.visitChildren(self)



    def logicalAndExpression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = PJPParser.LogicalAndExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 16
        self.enterRecursionRule(localctx, 16, self.RULE_logicalAndExpression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            localctx = PJPParser.LogicalAndPassthroughContext(self, localctx)
            self._ctx = localctx
            _prevctx = localctx
